--- a/lab02_solutions/lab02_task02_solution/package.xml
+++ b/lab02_solutions/lab02_task02_solution/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>lab02_task02</name>
+  <name>lab02_task02_solution</name>
   <version>0.0.0</version>
-  <description>The lab02_task02 package</description>
+  <description>The lab02_task02 solution package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
