--- a/lab02_solutions/lab02_task03_solution/CMakeLists.txt
+++ b/lab02_solutions/lab02_task03_solution/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(lab02_task03)
+project(lab02_task03_solution)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
