Update lab04_example_solution package name

--- a/lab04_solution/lab04_example/package.xml
+++ b/lab04_solution/lab04_example/package.xml
@@ -2,7 +2,7 @@
 <package format="2">
   <name>lab04_example_solution</name>
   <version>0.0.0</version>
-  <description>The lab04_example package</description>
+  <description>The lab04_example_solution package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
